--- a/css/options.css
+++ b/css/options.css
@@ -2,6 +2,93 @@
   position: relative;
   height: 100%;
 }
+.sra-setting {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  font-size: 26px;
+  text-align: right;
+  z-index: 5;
+}
+  .sra-setting > i {
+    cursor: pointer;
+  }
+  .sra-setting__content {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 3;
+    display: none;
+  }
+  .sra-setting__container {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+  .sra-setting__body {
+    color: #454851;
+    border: 1px solid #656565;
+    background-color: #F3D32F;
+    text-align: left;
+    font-size: 14px;
+    width: 500px;
+    margin: auto;
+  }
+  .sra-setting__body textarea {
+    background-color: transparent;
+    color: #454851;
+    margin-top: 10px;
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 14px;
+    line-height: 1.2;
+    font-family: Consolas, 'Courier New', Courier, Monaco, monospace;
+    min-height: 40px;
+  }
+  .show {
+    display: block;
+  }
+  .sra-setting__body .sra-flex span:nth-of-type(2) {
+    flex-grow: 1;
+    margin-left: 10px;
+  }
+  .sra-setting__body .sra-flex span:nth-of-type(3) {
+    font-size: 24px;
+    cursor: pointer;
+  }
+  .sra-setting__main {
+    padding: 10px;
+  }
+  
+  .sra-setting__header {
+    display: flex;
+    align-items: center;
+    background-color: #454851;
+    color: #F3D32F;
+    padding: 5px 10px;
+  }
+  .sra-setting__header span:nth-of-type(1) {
+    flex-grow: 1;
+    font-size: 14px;
+    margin-left: 12px;
+  }
+  .sra-setting__header span:last-of-type {
+    font-size: 18px;
+    cursor: pointer;
+  }
+  
+  
+
 .sra-power {
   position: fixed;
   width: 60px;
@@ -12,6 +99,7 @@
   color: #454851;
   background-color: #F3D32F;
   z-index: 1;
+  cursor: pointer;
 }
 .sra-power--off {
   background-color: #656565;
@@ -276,7 +364,7 @@
     border-radius: 1px;
     background-color: transparent;
     color: inherit;
-    border: 1px solid rgba(0,0,0,0.5);
+    border: 1px solid currentColor;
     line-height: 20px;
   }
   
