--- a/css/options.css
+++ b/css/options.css
@@ -436,3 +436,98 @@
   .sra-flex--foot .icon-cloud-flash {
     font-size: 18px;
   }
+.input-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-grow: 1;
+  position: relative;
+
+  .regex-special {
+    opacity: 0.5;
+    position: absolute;
+
+    &:first-child {
+      left: 10px;
+    }
+    &:last-child {
+      right: 10px;
+    }
+  }
+  &:not(.is-regex) {
+    .regex-special {
+      display: none;
+    }
+  }
+  &.is-regex {
+    .sra-script__host {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+  }
+}
+.sra-script__regex {
+  margin: 0 20px;
+  top: 1px;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  line-height: 1.2;
+  font-family: Consolas, 'Courier New', Courier, Monaco, monospace;
+  font-weight: 600;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: pointer;
+  position: relative;
+
+  .checkbox {
+    margin-right: 10px;
+    border: 1px solid #F3D32F;
+    background: none;
+    height: 15px;
+    width: 15px;
+    border-radius: 1px;
+    position: absolute;
+    top: 1px;
+    left: -2px;
+    height: 15px;
+    width: 15px;
+    pointer-events: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &:after {
+      color: #F3D32F;
+    }
+  }
+  input {
+    height: 15px;
+    width: 15px;
+    opacity: 0;
+    cursor: pointer;
+
+    &:checked ~ .checkbox:after {
+      color: #F3D32F;
+      content: "\2714 \fe0e";
+      font-size: 22px;
+      top: 1px;
+      left: 1px;
+      position: relative;
+    }
+  }
+}
+.sra-script--enable {
+  .sra-script__regex {
+    .checkbox {
+      border: 1px solid #454851;
+    }
+    input {
+      &:checked ~ .checkbox:after {
+        color: #454851;
+      }
+    }
+  }
+}
